# Project1

./: .gitignore
backend/: pyproject.toml
backend/api/: .env  alembic.ini  auth_config.py  docker-compose.yaml  main.py
backend/api/api_auth/: fakes.py
backend/api/api_auth/application/dto/: login.py
backend/api/api_auth/domain/: entities.py  interfaces.py  token_entity.py
backend/api/api_auth/presentation/: auth_api.py  dtos.py  ioc.py  routing.py
backend/api/api_auth/tests/: fakes.py
backend/api/api_chat/application/: commands.py  queries.py
backend/api/api_chat/domain/: entity.py  interfaces.py
backend/api/api_chat/infrastructure/: chat_repository.py  orm.py
backend/api/api_chat/presentation/: chat_api.py  chat_dto.py  chat_helpers.py  chat_ioc.py
backend/api/migrations/: README  env.py
backend/api/migrations/versions/: 8cf35665c77b_refactor_orm_for_universal_chats.py  ade0952749cc_initial_migration.py
backend/api/orm/: orm.py
backend/api/services/assets_service/: README.md
backend/api/services/media_upload_service/: README.md
backend/api/templates/: login.html
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backup/auth/: main.py  pyproject.toml  pyvenv.cfg
backup/auth/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
backup/auth/auth/: auth.py  crud.py  helpers.py  models.py  utils.py  validate.py
backup/auth/certs/: jwt-private.pem  jwt-public.pem
backup/auth/core/: config.py
backup/auth/middleware/: blacklist_token.py
backup/auth/models/: user.py
backup/auth/services/: user_service.py
(+252 files in other folders)
