[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dishka>=1.9.1",
    "fastapi>=0.135.2",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email,settings]>=2.12.5",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
